# rt

./: LICENSE  readme.md
data/: CThead.cmap  CThead.hdr  bunny.tm  bunny.tm.tgz  func200x200.hf  hfield.2x2  hfield.4x4  hfield2.2x2  two_dist.cmap  two_dist.nrrd  volume_render.py  volume_render_mip.py
data/volume-tooth/: tooth.cmap
reference_implementation/: readme.txt
reference_implementation/cs6620-prog6/: Box.cc  DielectricMaterial.cc  GriddedGroup.cc  Group.cc  Image.cc  LambertianMaterial.cc  Makefile  MetalMaterial.cc  MetalMaterial.h  OrenNayarMaterial.cc  OrenNayarMaterial.h  PhongMaterial.h  Plane.h  Primitive.h  README  Ring.h  Sampler.h  Sphere.h  TODO  Triangle.h  specere.cc
reference_implementation/cs6620-prog6/.svn/: dir-props  entries
reference_implementation/cs6620-prog6/.svn/text-base/: Array3.h.svn-base  Box.h.svn-base  DielectricMaterial.h.svn-base  Disk.cc.svn-base  Disk.h.svn-base  GriddedGroup.h.svn-base  Heightfield.cc.svn-base  Heightfield.h.svn-base  Image.h.svn-base  PhongMaterial.cc.svn-base  PinholeCamera.cc.svn-base  Plane.cc.svn-base  Primitive.cc.svn-base  QAEB.h.svn-base  Ring.cc.svn-base  Scene.cc.svn-base  Scene.h.svn-base  Time.cc.svn-base  Triangle.cc.svn-base  filter_graph.cc.svn-base  filter_test.cc.svn-base  genheightfield.cc.svn-base  req1.cc.svn-base
reference_implementation/cs6620-prog6/Filter/: BoxKernel1D.h  BoxWindow1D.h  Filter2D.cc  Filter2DWrapper.h  FilterFactory.cc  FilterFactory.h  LanczosWindow1D.h  TriangleKernel1D.h
reference_implementation/cs6620-prog6/Filter/.svn/: entries
reference_implementation/cs6620-prog6/Filter/.svn/text-base/: Filter1D.cc.svn-base  Filter1DWrapper.h.svn-base  SeparableKernel2D.h.svn-base  SincKernel1D.h.svn-base
reference_implementation/cs6620-prog6/scenes/: qaeb_scene.h  req4.h  req6.h
reference_implementation/cs6620-prog6/scenes/.svn/: entries
reference_implementation/cs6620-prog6/scenes/.svn/text-base/: attenuation.h.svn-base  highlight_test.h.svn-base  prog2diel.h.svn-base  prog2metal.h.svn-base  prog2orennayar.h.svn-base  prog2phong.h.svn-base  req2.h.svn-base  req5.h.svn-base
src/: CMakeLists.txt  Color.h  RayTracer.cc  RayTracer.h  genheightfield.cc  glass_refraction_scene.h  many_shapes_scene.h  old_makefile  perf_template.txt  point_scene.h  req.h  req3.h  req4.h  req4.h.bak  req6.h  req8.h  rt.cc  rt.cc.12feb05  rt.cc.1feb05  rt.cc.9feb-9p  rt.cc.firsthandin  rt.cc.test  rt.h  rt2.cc  rtiso.cc  rtvol.cc  sphere_scene.h  strange.h  viewer.cc  volume_scene.h  volume_scene_curv.h  volume_scene_tooth.h  volume_scene_tooth_curv.h  volume_scene_tooth_mip.h  volume_scene_two_dist.h  volume_scene_two_dist_curv.h  volume_scene_two_dist_mip.h
src/NrrdWrapper/: NrrdWrapper.cpp  NrrdWrapper.h
src/Reader/: NrrdObject.cpp  NrrdObject.h  Reader.cpp
src/assign2/: assign2.tgz  assign2_img1_perf.txt  assign2_img2_perf.txt  assign2_img3_perf.txt  rt.cc.assign2_img1  rt.cc.assign2_img2  rt.cc.assign2_img3
src/assign3/: assign3_img1_perf.txt  rt.cc.creative  rt.cc.terrain
src/assign4/: creat4.h  post-time.txt  pre-time.txt
src/assign5/: assign5_img2_perf.txt  assign5_img2_perf.txt~
src/assign9/: assign9_img1.h
src/gl/: AxisBox.cc  AxisBox.h  BBox.cc  BBox.h  BVH.cc  BVH.h  Background.h  BoxFilter.cc  BoxFilter.h  Camera.h  Colormap.cc  Colormap.h  ConstantBackground.h  CoupledMaterial.cc  CoupledMaterial.h  CurvatureVolumeMaterial.cc  CurvatureVolumeMaterial.h  DielectricMaterial.cc  DielectricMaterial.h  DirectionalLight.h  Disk.cc  Disk.h  Filter.h  FunctionEval.cc  FunctionEval.h  GaussianFilter.cc  GaussianFilter.h  Group.h  HeightField.cc  HeightField.h  HitRecord.h  IsosurfaceVolumeMaterial.cc  IsosurfaceVolumeMaterial.h  JitteredSample.cc  JitteredSample.h  LambertianMaterial.cc  LambertianMaterial.h  LanczosSincFilter.cc  LanczosSincFilter.h  Light.h  (+51 more)
src/gl/old/: #viewerscene.h#  axisbox.cc  axisbox.h  boundingbox.cc  boundingbox.h  hbv_node.cc  hbv_node.h  hpoint.h  image.cc  image.h  light.h  matrix.cc  matrix.h  ray.cc  ray.h  rgb.h  solidtexture.h  sphere.cc  sphere.h  surface.h  surfacetexture.h  texture.h  triangle.cc  triangle.h  vector3d.cc  vector3d.h  viewerscene.cc
src/prog8/: Colormap.cc  Colormap.h  PhongVolumeMaterial.cc  req8.h
